# library

./: .gitignore  CMakeLists.txt  README.md
shared/include/: shared.h
shared/src/: CMakeLists.txt  shared.cpp  version_info.rc.in
shared/test/: CMakeLists.txt
shared/test/dynamic_call/: CMakeLists.txt  shared11_test.cpp  shared_proxy.hpp  shared_test.cpp
shared/test/static_call/: CMakeLists.txt  static_test.cpp
static/: CMakeLists.txt
static/include/: static_lib.h
static/src/: CMakeLists.txt  static_lib.cpp
static/test/: CMakeLists.txt  static_test.cpp
